# goose

./: .gitignore  404.html  Justfile  LLAMA_PROMPT_GUARD_SETUP.md  PROMPT_INJECTION_BENCHMARKING.md  PROMPT_INJECTION_DETECTION_README.md  SECURITY.md  SECURITY_INTEGRATION_SUMMARY.md  convert_models_to_onnx.py  create_comprehensive_dataset.py  download_hf_datasets.py  download_hf_datasets_api.py  index.html  prompt-injection-benchmark-config.json  real_world_prompt_injection_attacks.json  test_file_summarise_2.txt  test_llama_prompt_guard2.py  test_new_models.py
assets/js/: 0a45c249.388511b1.js  0a45c249.aa8c6f01.js  814f3328.92737d87.js  814f3328.f7986eb6.js  main.d2051ff0.js  runtime~main.29dd9c8e.js  runtime~main.b838b13e.js
blog/: index.html
blog/README/: index.html
blog/archive/: index.html
blog/authors/: index.html
community/: index.html
crates/goose-security/: Cargo.toml
crates/goose-security/src/: ensemble_scanner.rs  factory.rs  lib.rs  model_downloader.rs  model_scanner.rs  onnx.rs  onnx_model_scanner.rs  scanner.rs  security_logger.rs  types.rs
datasets/: all_prompt_injection.json  all_prompt_injection.jsonl  comprehensive_prompt_injection.json  evaded_prompt_injection.json  huggingface_prompt_injection.json  huggingface_prompt_injection.jsonl
deeplink-generator/: index.html
extension/: index.html
extensions/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
recipe-generator/: index.html
recipes/: index.html
scripts/: collect_real_world_attacks.py  download_hf_datasets.py
(+264 files in other folders)
